slurm_output/old/slurm-48433216.out
compute-a-17-85.o2.rc.hms.harvard.edu
  File "multithreading.py", line 54
    queue.put(output)
        ^
SyntaxError: invalid syntax
